--- a/authentification/templates/authentification/inscription.html
+++ b/authentification/templates/authentification/inscription.html
@@ -13,6 +13,12 @@
         <input type="text" id="username" name="username" required>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
+        <label for="">Role</label>
+        <select name="role" id="">
+            {% for role in roles %}
+                <option value="{{ role }}">{{ role }}</option>
+            {% endfor %}
+        </select>
         <label for="password">Mot de passe</label>
         <input type="password" id="password" name="password" required>
 
